Extract graalvm build-logic